--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "mongoose": "^8.14.0"
+  },
+  "devDependencies": {
+    "mongoose": "^8.14.0"
   }
 }
