--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.14.0"
   },
   "devDependencies": {
