--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
-    "mongoose": "^8.14.0"
+    "mongoose": "^8.14.0",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "mongoose": "^8.14.0"
